unpackaged/main/default/objects/Post_Code__c/Post_Code__c.object-meta.xml
<CustomObject>
    <description>This object is used for Lead and Project Ownership assignment; When Run_Postcode_Assignment__c is checked and the Suburb and Postcode of the relevant object/record matches the Suburb and Postcode of a record for this object, the Owner of the Post Code record is set as the owner of the other record.</description>
    <label>Postcode</label>
    <nameField>
        <label>Postcode</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Postcodes</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>