unpackaged/main/default/objects/Post_Code__c/fields/Area__c.field-meta.xml
<CustomField>
    <fullName>Area__c</fullName>
    <description>Area associated to the post code</description>
    <label>Area</label>
    <length>255</length>
    <type>Text</type>
</CustomField>