unpackaged/main/default/objects/Post_Code__c/fields/City__c.field-meta.xml
<CustomField>
    <fullName>City__c</fullName>
    <description>City associated to the post code</description>
    <label>City</label>
    <length>255</length>
    <type>Text</type>
</CustomField>