unpackaged/main/default/objects/Post_Code__c/fields/Country__c.field-meta.xml
<CustomField>
    <fullName>Country__c</fullName>
    <description>Country associated to the post code</description>
    <label>Country</label>
    <length>255</length>
    <type>Text</type>
</CustomField>