unpackaged/main/default/objects/Post_Code__c/fields/Suburb__c.field-meta.xml
<CustomField>
    <fullName>Suburb__c</fullName>
    <description>Suburb associated to the post code</description>
    <label>Suburb</label>
    <length>255</length>
    <type>Text</type>
</CustomField>