unpackaged/main/default/objects/Post_Code__c/fields/Suburb_Postcode_Id__c.field-meta.xml
<CustomField>
    <fullName>Suburb_Postcode_Id__c</fullName>
    <description>The Unique Id for the Postcode-Suburb Assignment. 
The syntax is SuburbPostcode e.g Sydney2000</description>
    <externalId>true</externalId>
    <label>Suburb-Postcode Id</label>
    <length>80</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>